from git to https

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/stevenvachon/handlebars-react/issues"
   },
   "dependencies": {
-    "handlebars-html-parser": "git://github.com/stevenvachon/handlebars-html-parser.git",
+    "handlebars-html-parser": "https://github.com/stevenvachon/handlebars-html-parser.git",
     "postcss": "^5.0.17",
     "postcss-js": "~0.1.2",
     "react": "0.14.7"
